<resources>
    <string name="app_name">OnlineShopPoizon</string>
    <string name="email"><font size="20">email</font></string>
    <string name="shop_logo">shop_logo</string>
    <string name="password"><font size="20">password</font></string>
    <string name="forgot_password"><font size="15">forgot password?</font></string>
    <string name="log_in"><font size="20">log in</font></string>
    <string name="register"><font size="20">register</font></string>
    <string name="or"><font size="20">or</font></string>
    <string name="ooo"><font size="20">ООО \"РЕ ТРЭЙДИНГ\"</font></string>
    <string name="username"><font size="20">username</font></string>
    <string name="confirm_password"><font size="20">confirm password</font></string>
    <string name="gotonextpage">goToNextPage</string>
    <string name="finish"><font size="20">finish</font></string>
    <string name="userphoto">userPhoto</string>
    <string name="phone_number"><font size="20">phone number</font></string>
    <string name="home">home</string>
    <string name="catalogue">catalogue</string>
    <string name="cart">cart</string>
    <string name="profile">profile</string>

    <string-array name="gender">
        <item>select gender</item>
        <item>male</item>
        <item>female</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items_for_you">Items for you</string>
    <string name="show_item_availability_in_shops">show item availability in shops</string>
    <string name="continue_to_payment">continue to payment</string>
    <string name="_3_198_p">3,198 p</string>
    <string name="total">total:</string>
    <string name="shop_name">shop name</string>
    <string name="contact_info">contact info</string>
    <string name="_2">2</string>
    <string name="in_stock">in stock</string>
    <string name="gender">gender</string>
    <string name="exit">exit</string>
    <string name="settings">settings</string>
    <string name="change_profile_data">change profile data</string>
    <string name="my_orders">my orders</string>
    <string name="username_profile">username</string>
    <string name="order_date">order date</string>
    <string name="n_123456">n 123456</string>
    <string name="order_sum">order sum:</string>
    <string name="item_name">item name</string>
    <string name="item_size">item size</string>
    <string name="_1_599">1,599</string>
    <string name="delivery">delivery</string>
    <string name="choose_delivery_type">choose delivery type</string>
    <string name="change_language">change language</string>
    <string name="notifications">notifications</string>
    <string name="change_theme">change theme</string>
    <string name="men_wear">men wear</string>
    <string name="top">top</string>
    <string name="_300p">300</string>
    <string name="delivery_cost">delivery cost:</string>
    <string name="street">street</string>
    <string name="apartment">apartment</string>
    <string name="_2_x_1_599">2 x 1,599</string>
    <string name="payment">payment</string>
    <string name="_3_498p">3,498p</string>
    <string name="add_new_card">add new card</string>
    <string name="pay_by_card">pay by card</string>
    <string name="add_card">add card</string>
    <string name="my_payment_methods">payment methods</string>
    <string name="my_cards">my cards</string>
    <string name="shop_info">Shop info</string>
    <string name="contact_number">"Contact number: "</string>
    <string name="shop_metro">"Shop metro: "</string>
    <string name="product_name">product name</string>
    <string name="product_barcode">product barcode</string>
    <string name="choose_size">choose size</string>
    <string name="product_price">product price</string>
    <string name="add_to_cart">add to cart</string>
    <string name="my_addresses">my addresses</string>
    <string name="add_new_address">add new address</string>
    <string name="city">city</string>
    <string name="direction">direction</string>
    <string name="name_address">name address</string>
    <string name="add_address">add address</string>
    <string name="order_details">order details</string>
    <string name="order_total_sum">Order total sum:</string>
    <string name="delivery_type">Delivery type:</string>
    <string name="payment_card">Payment card:</string>
    <string name="delivery_pick_up_address">Delivery / pick up address:</string>
    <string name="card_num">card num</string>
    <string name="exp_date">exp date</string>
    <string name="cvv">cvv</string>
    <string name="confirm_changes">confirm changes</string>
    <string name="profile_data">profile info</string>
    <string name="selected_size">"Selected size: "</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="selected_color">"Selected color: "</string>
    <string name="choose_size_and_color_first">Choose size and color first</string>
    <string name="item_already_exists_in_cart_updating_quantity">Item already exists in cart updating quantity</string>
    <string name="p">" p."</string>
    <string name="delete_this_address">Delete this address?</string>
    <string name="yes">Yes</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="no">No</string>
    <string name="delete_this_card">Delete this card?</string>
        <string name="cannot_add_more_than_of_single_item">Cannot add more than 9 of single item</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="fill_out_all_fields">Fill out all fields</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change_password">change password</string>
    <string name="enter_your_username_and_new_password">enter your username and new password</string>
    <string name="enter_all_fields">Fill out all fields</string>
    <string name="enter_valid_data">Enter valid data</string>


</resources>