<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">
    <ImageView
        android:id="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/xclogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/shop_logo"
       app:layout_constraintTop_toBottomOf="@id/back"/>
    <TextView
        android:id="@+id/enterUsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:text="@string/enter_your_username_and_new_password"
        android:textColor="@color/dark_brown"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@drawable/input_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/enterUsernameText"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:letterSpacing="0.1"
        android:inputType="textPersonName"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@drawable/input_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:hint="@string/new_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:letterSpacing="0.1"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_fields"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/buttons"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/next"
        android:text="@string/change_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>