<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/order_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_123456"
            android:textColor="@color/dark_brown"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:textColor="@color/dark_brown"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/order_num"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/order_date"
            android:background="@color/dark_brown"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/dark_brown"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:text="@string/order_sum"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/order_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/dark_brown"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:text="@string/_3_198_p"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>