<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/change_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/dark_brown"
        android:text="@string/payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/separator"/>
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/change_text"
        android:background="@color/dark_brown"
        android:layout_marginTop="10dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/items">

        <TextView
            android:id="@+id/delivery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textColor="@color/grey"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/delivery_cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_300p"
            android:textColor="@color/grey"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/item_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="item total"
            android:textColor="@color/grey"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_text"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/item_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_599"
            android:textColor="@color/grey"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_cost_text"
            android:layout_margin="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/prices"
        android:background="@color/dark_brown"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/dark_brown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/total_cost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_498p"
        android:textColor="@color/dark_brown"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="payment method"
        app:layout_constraintTop_toBottomOf="@id/total_text"
        android:textColor="@color/dark_brown"
        android:textSize="25sp"
        android:elevation="10dp"
        android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/payment_method"/>



    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cards"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:letterSpacing="0.1"
        android:text="@string/pay_by_card"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>