<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_brown">
        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            app:layout_constraintEnd_toStartOf="@+id/count_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/shop_name"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/contact_info"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            app:layout_constraintEnd_toStartOf="@+id/count_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/contact_info"
            android:layout_margin="15dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/shop_name"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/count_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/shop_availability_layout"

            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="45sp"
                android:text="@string/_2"
                android:textColor="@color/dark_brown"
                android:layout_marginTop="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/in_stock"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@id/count_layout"
                android:textColor="@color/dark_brown"
                app:layout_constraintTop_toBottomOf="@id/count"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>