<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CartFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <TextView
       android:id="@+id/cart_text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="35sp"
       android:text="@string/cart"
       android:textColor="@color/dark_brown"
       android:layout_margin="20dp"
       app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/cart_text"
        android:background="@color/dark_brown"
        android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/dark_brown"
            app:layout_constraintTop_toBottomOf="@id/cart_items"
            android:text="@string/total"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/dark_brown"
            app:layout_constraintTop_toBottomOf="@id/cart_items"
            android:text="@string/_3_198_p"
            android:layout_margin="20dp"
           app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/buttons"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.1"
            android:text="@string/continue_to_payment"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>