<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCardActivity">

    <ImageView
        android:id="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/change_text"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        app:flow_wrapMode="chain"
        android:textColor="@color/dark_brown"
        android:text="@string/add_card"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/separator"/>
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/change_text"
        android:background="@color/dark_brown"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:background="@drawable/add_card"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/card_num"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/search_bar_style"
            app:layout_constraintTop_toTopOf="parent"
           android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/card_num"
            android:textSize="15dp"
            android:textColorHint="@color/light_grey"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/exp_date"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/search_bar_style"
           app:layout_constraintTop_toBottomOf="@id/card_num"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/exp_date"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/light_grey"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/cvv"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/search_bar_style"
            app:layout_constraintTop_toBottomOf="@id/card_num"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/cvv"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/light_grey"
            android:paddingLeft="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:letterSpacing="0.1"
        android:text="@string/add_new_card"
        />


</androidx.constraintlayout.widget.ConstraintLayout>