<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:elevation="5dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/item_photo"
            android:text="@string/item_name"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/item_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/item_photo"
            android:text="@string/item_size"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/_2_x_1_599"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>